--- a/1-course-slides/3-multivariate.Rmd
+++ b/1-course-slides/3-multivariate.Rmd
@@ -379,7 +379,7 @@ knitr::include_graphics("img/sem4.png")
 
 - \color{magenta}**Endogenous variables**\color{black}: variables (both OVs and LVs) directly 'caused' from inside the model (predictors & outcomes), with error estimate $\epsilon$ (OV) or $\zeta$ (LV)
 
-## A new starting point: From dataset columns to covariance matrices
+## A new starting point: From dataset columns to covariance matrices {#startingPoint}
 
 \begincols
   \begincol{.5\textwidth}
@@ -697,7 +697,7 @@ knitr::include_graphics("img/lm2path.png")
 
 \color{blue} How many parameters? **Five**: Intercept, 3 slopes, residual variance
 
-## Multivariate path models
+## Multivariate path models {#multipath}
 
 \fontsize{7pt}{12}\selectfont
 In the previous example, we only considered **bivariate relationships** (i.e., 2 variables at a time, controlling for other variables). But what if we include `IQ` as a common predictor of both `WM` and `MAT`? We would have 3 variables interacting at the same time.
@@ -885,7 +885,7 @@ Starting from *observed covariances* (or correlations), we can compute the value
 \fontsize{7pt}{12}\selectfont \color{blue}
 $r_{X_1,Y}$ = a + db + ec \color{black}&rightarrow; \color{blue}.70 = a + .24c + .20b \color{black}&rightarrow; \color{blue}a = .70 - .24c - .20b
 
-## Standardized vs. *Un*standardized solution
+## Standardized vs. *Un*standardized coefficients
 
 \fontsize{7.5pt}{12}\selectfont 
 Path coefficients are **partial regression coefficients** (relationship between an exogenous *x* and an endogenous variable *y*, controlling for all other exogenous variable affecting *y*). Similar to LM, they can be either *un*standardized or standardized:
@@ -917,6 +917,44 @@ For each exercise, the solution (or one of the possible solutions) can be found 
 # Model fit
 
 ## In the last episodes...
+
+\begincols
+  \begincol{.4\textwidth}
+  
+\fontsize{8.5pt}{12}\selectfont 
+__The problem & the solution__ \fontsize{7pt}{12}\selectfont  \newline
+Reality is **multivariate** and involves **latent variables**; SEM allows to analyze them through **systems of equations**:
+$$ \begin{cases} y_2 = \beta_{32}x_3 + \epsilon_2 \\ y_1 = \beta_{21}y_2 + \beta_{31}x_3 + \epsilon_1 \end{cases} $$
+\fontsize{8.5pt}{12}\selectfont 
+__SEM basics__ \fontsize{7pt}{12}\selectfont  \newline
+- Observed ($x$) vs latent ($\eta$) \newline
+- Exogenous vs endogenous \newline
+- Structural vs measurement model  \newline \color{violet}
+- Path model: obs. variables only \color{black} \newline
+- CFA = measurement model only \newline
+- Starting point of any SEM \newline = **covariance matrix**
+
+  \endcol
+\begincol{.6\textwidth}
+
+\fontsize{8.5pt}{12}\selectfont \color{violet}
+__Path analysis__ \fontsize{7pt}{12}\selectfont \color{black} \newline
+Pictorial representation of a theory of (observed) variable relationship \newline
+
+\fontsize{8.5pt}{12}\selectfont 
+__Graphical notation__ \fontsize{7pt}{12}\selectfont \newline
+- Variables: end.&rightarrow;with error; ex.&rightarrow;without error \newline
+- Errors: always exogenous and latent \newline
+- Path coefficients: single-headed arrows, *complete* \newline
+- (Co)variances: double-headed arrows - they are always there, whether you estimate them or not \newline
+
+\fontsize{8.5pt}{12}\selectfont 
+__Path coefficients__ \fontsize{7pt}{12}\selectfont \newline
+= partial regression coefficients (slopes) \newline
+either **unstandardized** (computed from raw variables, depending on the variable scale of measurement) or **standardized** (computed from standardized variables, ranging from -1 to 1)
+
+  \endcol
+\endcols
 
 ## Case study: Early mathematical abilities `r fontawesome::fa(name = "calculator",fill="#3333B2", height = "0.8em")`
 
@@ -1042,15 +1080,15 @@ p
 
 \begincols
   \begincol{.5\textwidth}
-  
+
+\fontsize{6pt}{12}\selectfont  
+
 ```{r , comment=NA}
 summary(fit.sem)
 ```
 
   \endcol
 \begincol{.5\textwidth}
-
-Here is the model summary:
 
 - __First lines__: info on convergence, parameter estimation method (ML), optimization (...), and number of estimated parameters (3 path coeff. + 1 residual variance)
 
@@ -1065,18 +1103,48 @@ Here is the model summary:
   \endcol
 \endcols
 
+## Path coefficient interpretation
+
+\fontsize{6pt}{12}\selectfont
+
+\begincols
+  \begincol{.5\textwidth}
+  
+```{r , comment=NA}
+summary(fit.sem)
+```
+
+  \endcol
+\begincol{.5\textwidth}
+
+- `Estimate` = estimated parameter/coefficient (predicted difference or change for a 1-unit increase in the exogenous variable)
+
+- `Std.Error` = standard error (uncertainty) of the estimate
+
+- `z-value` = test statistic computed as \newline \color{blue}*z = Estimate/Std.Error* \color{black}
+
+- `P(>|z|)` = *p* corresponding to the *t*-value \color{white}spa \color{black} with \color{blue} *No. Obs. $-$ No. Coeff. $-$ 1* \newline \color{white}  \color{white}space \color{black} degrees of freedom 
+
+>- Here, for instance: \newline - a 1-unit increase in `WM` predicts an increase in `MAT` by 0.812 units \newline - the residual variance of `MAT` is 60.787 \newline - *p*-values suggest that all path coefficients are significant
+
+  \endcol
+\endcols
+
 ## Path model vs. linear model estimates
 
 \fontsize{7pt}{12}\selectfont
 We can see that the coefficients estimated by the path model are very similar to those estimated with LM:
-
-```{r , comment=NA}
-coef( fit.sem ) # path model estimates
-
+```{r , comment=NA,eval=FALSE}
+coef(fit.lm); summary(fit.lm)$sigma^2 # LM estimate
+```
+```{r , comment=NA,echo=FALSE}
 round(c( coef(fit.lm), sigma2 = summary(fit.lm)$sigma^2 ) ,3) # LM estimates 
 ```
+```{r , comment=NA}
+coef(fit.sem) # path model estimates
+```
 
-__But where is the intercept?__
+__They are the same, but where is the intercept?__
 
 In SEM, intercepts are usually not considered as 'direct' model parameters. To estimate them, we need to set `meanstructure = TRUE`
 ```{r , comment=NA}
@@ -1088,7 +1156,7 @@ Note: Path analysis coefficients can be interpreted identically to LM coefficien
 
 ## Hands on `r fontawesome::fa(name = "r-project", fill="#3333B2",height = "1em")` (part 1)
 
-\fontsize{7pt}{12}\selectfont
+\fontsize{6.5pt}{12}\selectfont
 
 1. Open the `earlymath` dataset from the `ADati package`
 
@@ -1099,25 +1167,242 @@ install_github("https://github.com/masspastore/ADati") # install the ADati pkg
 data(earlymath, package = "ADati") # load earlymath dataset from ADati pkg
 ```
 
-2. Fit a LM `lm1` predicting `MAT` by `WM`, `STM`, `ANS`, and `QI`
+2. Fit a linear model `lm1` predicting `MAT` by `WM`, `STM`, `ANS`, and `QI`
 
-3. Fit a path model `pm1` with the same outcome and 'predictors'
+3. Fit a path model `pm1` with the same 'outcome' and 'predictor' variables
 
 4. Print, interpret, and compare the parameters estimated by both models
 
-5. Inspect the predicted covariance matrix by running `inspect( fit.sem, "estimates" )$psi[ 2:4, 2:4 ]` and compare it with the covariance matrix of observed variables *S*
+5. Inspect the predicted covariance matrix by running \color{blue} `inspect(pm1,"estimates")$psi[2:5,2:5]` \color{black} and compare it with the observed covariance matrix of exogenous variables \color{blue} `cov(earlymath[,c("WM","STM","ANS","QI")])` \color{black}
 
-6. Now standardize all variables, re-fit model `pm1`, and print the estimated parameters
+6. Standardize all variables (\color{blue}$z_{x_i} = (x_i - \overline{x}) / s_x$\color{black}), re-fit the same model (call it `pm1.z`), and print the estimated parameters
 
-7. Now refit model `pm1` on the original variables by setting `std.lv = TRUE` and compare the estimated parameters to those estimated from the standardized variables
+7. Standardize the parameters estimated by the original model `pm1` by running \color{blue}`standardizedsolution(pm1)` \color{black} and compare the output with that of `parameterestimates(pm1.z)`
 
-## Standardized vs. *un*standardized solution
+## *Un*standardized vs. standardized solution
+
+\fontsize{7pt}{12}\selectfont
+In SEM (including path analysis and CFA), we refer to the ***un*****standardized solution** when the parameters are unstandardized, i.e., they are estimated from unstandardized variables and their size depends on the measurement scale of each variable
+```{r , echo=FALSE,warning=FALSE,message=FALSE}
+rm(list=ls())
+data(earlymath, package = "ADati") # load earlymath dataset from ADati pkg
+library(lavaan)
+mymodel <- 'MAT ~ WM + STM + ANS + QI'
+pm1 <- sem(model = mymodel, data = earlymath)
+```
+```{r , comment=NA}
+# unstandardized solution
+parameterestimates(pm1)[1:5,]
+```
+
+In contrast, we refer to the **standardized solution** when the parameters are standardized, i.e., they range from -1 to +1 because they have been either estimated from standardized variables or transformed into standardized coefficient after estimation
+```{r , comment=NA}
+# standardized solution
+standardizedsolution(pm1)[1:5,]
+```
+
+## `r fontawesome::fa(name = "microscope", fill = "blue", height = "1em")` Parameter matrices
+
+\fontsize{7pt}{12}\selectfont
+As anticipated in \color{blue}[slide #11](#startingPoint)\color{black}, SEM works with matrices: it starts from a matrix (i.e., the observed covariance matrix) and it returns **matrices of estimated parameters**. Whereas we saw that parameters can be printed into regression-like tables, something more complex is happening under the hood: the model returns matrices of estimates:
+
+\fontsize{6pt}{12}\selectfont
+
+\begincols
+  \begincol{.5\textwidth}
+
+$\lambda$ = matrix of **factor loadings**
+```{r , comment=NA}
+inspect( pm1, "estimates")[1]
+```
+$\theta$ = matrix of **latent factor (co)variances**
+```{r , comment=NA}
+inspect( pm1, "estimates")[2]
+```
+
+Note: \color{blue} $\lambda$ and $\theta$ require latent variables
+
+  \endcol
+\begincol{.5\textwidth}
+
+$\psi$ = matrix of observed variable **(co)variances** (i.e., the (co)variances estimated by the model)
+```{r , comment=NA}
+inspect( pm1, "estimates")[3]
+```
+$\beta$ = matrix of **regression coefficients** (paths)
+```{r , comment=NA}
+inspect( pm1, "estimates")[4]
+```
+
+  \endcol
+\endcols
 
 ## Fitting a (multivariate) path model with R
 
-## Interpreting model outputs
+\fontsize{7pt}{12}\selectfont
+As we saw in \color{blue} [slide #20](#multipath)\color{black}, path analysis uses **one equation per endogenous variable**, and so does the model syntax used by `lavaan`:
+
+\begincols
+  \begincol{.5\textwidth}
+
+- 1 endogenous = 1 equation
+```{r , comment=NA}
+model <- 'y1 ~ x1 + x2'
+```
+```{r echo=FALSE,warning=FALSE,message=FALSE}
+library(DiagrammeR); library(DiagrammeRsvg); library(rsvg)
+
+tmp <- grViz(
+'digraph boxes_and_circles {
+  graph [layout = neato]
+  node [shape = box]
+  x1 [pos="-2,0.5!"]
+  x2 [pos="-2,-0.5!"]
+  y1 [pos="0,0!"]
+  node [shape = plaintext]
+  e1 [label = <&epsilon;1> pos="1,0!"]
+  # edges
+  x1->y1 
+  x2->y1
+  e1->y1}')
+
+# Convert to SVG, then save as png
+tmp = export_svg(tmp)
+tmp = charToRaw(tmp) # flatten
+rsvg_png(tmp, "img/1end.png") # saved graph as png in current working directory
+```
+```{r , echo = FALSE, out.width = "110px",fig.align="center"}
+knitr::include_graphics("img/1end.png")
+```
+
+- 2 endogenous = 2 equations
+```{r , comment=NA}
+model <- 'y1 ~ x1 + x2
+          y2 ~ x1 + x2 + y1'
+```
+```{r echo=FALSE,warning=FALSE,message=FALSE}
+library(DiagrammeR); library(DiagrammeRsvg); library(rsvg)
+
+tmp <- grViz(
+'digraph boxes_and_circles {
+  graph [layout = neato]
+  node [shape = box]
+  x1 [pos="-2,0.5!"]
+  x2 [pos="-2,-0.5!"]
+  y1 [pos="0,0.5!"]
+  y2 [pos="0,-0.5!"]
+  node [shape = plaintext]
+  e1 [label = <&epsilon;1> pos="1,0.5!"]
+  e2 [label = <&epsilon;2> pos="1,-0.5!"]
+  # edges
+  x1->y1 
+  x2->y1
+  x1->y2 
+  x2->y2
+  y1->y2
+  e1->y1
+  e2->y2}')
+
+# Convert to SVG, then save as png
+tmp = export_svg(tmp)
+tmp = charToRaw(tmp) # flatten
+rsvg_png(tmp, "img/2end.png") # saved graph as png in current working directory
+```
+```{r , echo = FALSE, out.width = "110px",fig.align="center"}
+knitr::include_graphics("img/2end.png")
+```
+
+  \endcol
+\begincol{.5\textwidth}
+
+- 3 endogenous = 3 equations
+```{r , comment=NA}
+model <- 'y1 ~ x1 + x2
+          y2 ~ x1 + x2 + y1
+          y3 ~ x1 + x2 + y1 + y2'
+```
+```{r echo=FALSE,warning=FALSE,message=FALSE}
+library(DiagrammeR); library(DiagrammeRsvg); library(rsvg)
+
+tmp <- grViz(
+'digraph boxes_and_circles {
+  graph [layout = neato]
+  node [shape = box]
+  x1 [pos="-2,0.5!"]
+  x2 [pos="-2,-0.5!"]
+  y1 [pos="0,0.5!"]
+  y2 [pos="0,-0.5!"]
+  y3 [pos="0,-1.5!"]
+  node [shape = plaintext]
+  e1 [label = <&epsilon;1> pos="1,0.5!"]
+  e2 [label = <&epsilon;2> pos="1,-0.5!"]
+  e3 [label = <&epsilon;3> pos="1,-1.5!"]
+  # edges
+  x1->y1 
+  x2->y1
+  x1->y2 
+  x2->y2
+  x1->y3
+  x2->y3
+  y1->y2
+  y2->y3
+  e1->y1
+  e2->y2
+  e3->y3}')
+
+# Convert to SVG, then save as png
+tmp = export_svg(tmp)
+tmp = charToRaw(tmp) # flatten
+rsvg_png(tmp, "img/3end.png") # saved graph as png in current working directory
+```
+```{r , echo = FALSE, out.width = "110px",fig.align="center"}
+knitr::include_graphics("img/3end.png")
+```
+
+Note: similar to `lm()` and `lmer()`, we do not specify the error term in the formula, but just the exogenous variables (*x*) related to each endogenous variable (*y*)
+
+  \endcol
+\endcols
 
 ## Hands on `r fontawesome::fa(name = "r-project", fill="#3333B2",height = "1em")` (part 2)
+
+\fontsize{8pt}{12}\selectfont
+
+1. Using the `sem()` function from the `lavaan` package, fit a model corresponding to the path diagram represented in \color{blue} [slide #20](multipath) \color{black}; you can use the `semPaths(model_name)` function from the `semPlot` package to check whether you did it right
+
+2. How many unknown parameters? Try answering before running the code
+
+3. Print, interpret, and evaluate the statistical significance of the parameters estimated by the **unstandardized solution** and those estimated by the **standardized solution**
+
+4. In the model formula, label the path$^1$ $\beta_{25}$ as "a", the $\beta_{12}$ as "b", and the path $\beta_{15}$ as "c", then add a new line of equation: \color{blue}`ab := a*b` \color{black}$^2$, fit the model again, and print the parameters \newline
+
+\fontsize{6pt}{12}\selectfont
+
+$^1$Note: to __label__ a path with a letter (or a word), just write the letter before the corresponding predictor and put a `*` between them, for example: \color{blue} `MAT ~ a*QI` \color{black}
+
+$^2$ The symbol \color{blue} `:=` \color{black} stands for "Define non-model parameter" (i.e., creating a parameter by combining other parameters)
+
+## `r fontawesome::fa(name = "microscope", fill = "blue", height = "1em")` Labeled and composed parameters in lavaan
+
+\fontsize{7.5pt}{12}\selectfont
+In `lavaan`, it is possible to **label parameters** (i.e., to give a name to a parameter, similar to how we do when we create an R object with the `<-` symbol) by 'multiplying' the parameter label with the name of the variable corresponding to that parameter.
+
+For instance, here we call the path between QI and WM "a", whereas we call "b" and "c" the paths linking `MAT` to `WM` and `QI`, respectively. The path linking `STM` to `MAT` is called "tony" :)
+```{r , comment=NA}
+model <- 'MAT ~ b*WM + c*QI + ANS + tony*STM
+          WM ~ a*QI'
+```
+
+Why should we label parameters? Because this allows **creating new parameters as a combination** of other parameters. And this is needed in many analyses, including **mediation**.
+
+```{r , comment=NA}
+model <- 'MAT ~ b*WM + c*QI + ANS + tony*STM
+          WM ~ a*QI
+          # the new parameter "ab" is the product between "a" and "b" 
+          ab := a*b
+          # the new parameter "total" is the sum of "c" and "ab"
+          total := c + ab'
+```
 
 ## Mediation analysis
 
